test/src/e2e_vm_tests/test_programs/should_pass/language/storage_declaration/src/main.sw
contract;
storage {
  supply: u64 = 0,
  demand: u64 = 0,
  name: str[4] = "test",
}
fn main() {
    
}
