test/src/e2e_vm_tests/test_programs/should_fail/abi_fallback_with_parameters/src/main.sw
contract;

#[fallback]
fn fallback(a: u64) {
}
